--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,25 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+@layer base {
+  .square,
+  .btn {
+    border: 2px solid black;
+    transition: all 200ms;
+    border-radius: 0;
+  }
+  .square.square--hovered:hover,
+  .btn:hover {
+    transform: translate(6px, -4px);
+    box-shadow: -6px 4px 0 0;
+    cursor: pointer;
+  }
+}
+
+@layer components {
+  .btn {
+    padding: 8px 16px;
+  }
 }
